result/subtask12-loop2/testcase01.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
INT_LIT 0
> Insert `counter` (addr: 1) to scope level 1
/home/share/hw2/input/subtask12-loop2/testcase01.cpp:4:5: error:  syntax error
     4 |    while  counter < 100000 ) {
       |    ^
Total lines: 4
